Began work on INTRO
Put grid and separated into began working work.

--- a/jb_home.html
+++ b/jb_home.html
@@ -21,8 +21,14 @@
 
 <body>
       <header>
-            <img src="jb_logo.png" alt="">
-            <nav>
+            <div id="promotionbar">
+                  <a href="#">$25 Off Surf Camp</a>
+                  <a href="#">THRU JAN 21-MAR 30</a>
+            </div>
+            <div id="navbar">
+                  <div id="mainlogo">
+                  </div>
+
                   <!-- Begin Dropdown Nav -->
                   <div class="dropdown" class="sticky">
                         <button class="dropbtn"><a href="#">Home</a></button>
@@ -33,51 +39,126 @@
                         <button class="dropbtn"><a href="#">Classes <b class="caret"></b></a></button>
                         <!-- Div encasing dropdown button links -->
                         <div class="dropdown-content">
-                              <a href="#">Residential</a>
-                              <a href="#">Business</a>
-                              <a href="#">Rentals</a>
-                              <a href="#">Properties</a>
+                              <a href="#">Intro Surfing</a>
+                              <a href="#">Surfing I</a>
+                              <a href="#">Surfing II</a>
+                              <a href="#">Surfing III</a>
+                              <a href="#">Master Surfing</a>
                         </div>
                         <!-- Div encasing dropdown button links ends -->
                   </div>
                   <div class="dropdown" class="sticky">
                         <button class="dropbtn"><a href="#">Camps <b class="caret"></b></a></button>
                         <div class="dropdown-content">
-                              <a href="#">Appraisals</a>
-                              <a href="#">Online Quotes</a>
+                              <a href="#">1-Day Grommets</a>
+                              <a href="#">3-Day Grommets</a>
+                              <a href="#">5-Day Grommets</a>
+                              <a href="#">Gurfer Weekend</a>
+                              <a href="#">Men's Retreat</a>
                         </div>
                   </div>
                   <div class="dropdown" class="sticky">
-                        <button class="dropbtn"><a href="#">Shop <b class="caret"></b></a></button>
+                        <button class="dropbtn"><a href="#">Shop<b class="caret"></b></a></button>
                         <div class="dropdown-content">
-                              <a href="#">Appraisals</a>
-                              <a href="#">Online Quotes</a>
+                              <a href="#">Gear</a>
+                              <a href="#">Quiver</a>
+                              <a href="#">Clothing</a>
+                              <a href="#">Shopping Cart</a>
+                              <a href="#">My Account</a>
+                              <a href="#">Tracking</a>
                         </div>
                   </div>
                   <div class="dropdown" class="sticky">
-                        <button class="dropbtn"><a href="#">Blog <b class="caret"></b></a></button>
-                        <div class="dropdown-content">
-                              <a href="#">Appraisals</a>
-                              <a href="#">Online Quotes</a>
-                        </div>
+                        <button class="dropbtn"><a href="#">Blog</a></button>
                   </div>
                   <div class="dropdown" class="sticky">
-                        <button class="dropbtn"><a href="#">Staff <b class="caret"></b></a></button>
-                        <div class="dropdown-content">
-                              <a href="#">Appraisals</a>
-                              <a href="#">Online Quotes</a>
-                        </div>
+                        <button class="dropbtn"><a href="#">Staff</a></button>
                   </div>
                   <!-- Div encases dropdown button ends -->
-            </nav>
+            </div>
       </header>
 
 
+      <div id="image">
 
-
-      <div id="maincontent">
-            a
       </div>
+      <div id="maincontent">
+            <aside class="left">
+                  <h2>Surfer Slang</h2>
+                  <div class="slang">
+                        <b>Barney</b>
+                        <br>
+                        A new and inexperience surfer
+                  </div>
+
+                  <div class="slang">
+                        <b>Boost</b>
+                        <br>
+                        To take off from a wave into an aerial</div>
+                  <div class="slang">
+                        <b>Cutback</b>
+                        <br>
+                        To change direction when streaking ahead of the curl
+                  </div>
+                  <div class="slang">
+                        <b>Gandolf</b>
+                        <br>
+                        An experienced wise older surfer
+                  </div>
+                  <div class="slang">
+                        <b>Grommet</b>
+                        <br>
+                        A very young surfer, a child
+                  </div>
+                  <div class="slang">
+                        <b>Green Room</b>
+                        <br>
+                        The inside of a tube
+                  </div>
+                  <div class="slang">
+                        <b>Gurfer</b>
+                        <br>
+                        A girl surfer
+                  </div>
+                  <div class="slang">
+                        <b>Hobble-Bobble</b>
+                        <br>
+                        An aerial launch while flapping your arms like a bird
+                  </div>
+                  <div class="slang">
+                        <b>Quiver</b>
+                        <br>
+                        A collection of surfboards</div>
+
+            </aside>
+            <div class="intro">
+                  <h1>Welcome</h1>
+                  <p>
+                        Come enjoy the excitement of riding the waves along the Jersey Shore with Jersey Buoys.
+                        Our nationally-accredited school brings its 22 years of experience in helping you become
+                        the surfer you've dreamed of becoming.
+
+                        Our classes are tailored to your needs. We provide instruction in basic surfing techniques
+                        and advanced techniques from cutbacks to boosts to hobble-bobbles. Choose a private or
+                        group lesson. Grommets can participate in 1, 3, or 5 half-day courses. We also sponsor
+                        surfing camps with catered meals and lodging.
+
+                        Whether a Barney or a Gandolf, you are always safe in our waters. Our experienced
+                        instructors are accredited by the National Instructors and Surf Schools Association.
+                        They are fully Red Cross and First Aid certified. In addition to being great teachers,
+                        every instructor has gone through extensive lifeguard training.
+
+                        The next big wave is approaching: Catch it with Jersey Buoys. Call to set up an
+                        appointment, grab a board from the quiver and head to the Green Room.
+                  </p>
+            </div>
+
+
+            <a href="#" class="right">
+                  <a class="buynow" href="#">Buy Now</a>
+            </a>
+      </div>
+
 
 
       <footer>
